--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "redux": "latest",
     "redux-object-connect": "^0.1.2",
     "redux-thunk": "^2.2.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "styled-components": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
